Show Movie Details

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,3 +53,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 safe-args-plugin = { id = "androidx.navigation.safeargs", version.ref = "navVersion" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize",  version.ref = "kotlin"  }
